# miking-lsp-demo

./: .gitignore  Makefile  out.mc  probtime_variable_output.txt  probtime_variable_output_fileonly.txt  rpclsp.sh  test  test.mdsl  test.txt
clients/mcore/: .gitignore  LICENSE.md  Makefile  compile-and-start.sh  package-lock.json  package.json  tsconfig.json
clients/probtime/: .gitignore  Makefile  compile-and-start.sh  language-configuration.json  package-lock.json  package.json  run-specific-test.sh
doc/: README.md  demovideo.mov
docs/: README.md
dsls/didrik/: .gitignore  Makefile  ast.syn  dsl.mc  test.mdsl
lib/: utils.mc
lsp-client/: .gitignore  .vscodeignore  Makefile  README.md  compile-and-start.sh  package-lock.json  package.json
lsp-client/stdlib/: error.mc  fileutils.mc
lsp-client/syntaxes/: mikingdsl.tmLanguage.json
lsp-sample/: package.json
lsp-server/: json-rpc.mc  lsp-server.mc  mexpr.mc  playground.mc  prune.mc
lsp-server/lsp/: change.mc  codelens.mc  compile.mc  completion-kind.mc  completion.mc  definition.mc  diagnostic.mc  hover.mc  implementation.mc  initialize.mc  lsp.mc  progress.mc  root.mc  symbol-kind.mc  symbol-to-completion.mc  symbols.mc  type-hierarchy.mc  unknown.mc  utils.mc
lsps/didrik/: lsp-server.mc
lsps/mcore/: .gitignore  Makefile  compile-mcore.mc  file.mc  (+24 more)
mcore-lsp/: .gitignore  compile-mcore.mc  lsp.mc  parse-error.mc
miking/: test-files.mk
miking-lsp/: .gitignore  Makefile  sample.json  sample.txt  test.mc
rpc-wrapper/: Cargo.toml
rpc-wrapper/src/: main.rs  request.rs
rust-server/: Cargo.toml
(+166 files in other folders)
