[package]
name = "rpc-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["secrets", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"